# ds-flights-ingest

./: .dockerignore  Dockerfile  Makefile  README.md  __main__.py  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cicd-python-test.yml  main.yml
app/: main.py
ds_flights_ingest/: app.py  gs_ops.py  settings.py
flyway/migrations/: V1__external_table.sql
infrastructure/: cloud_storage.tf  locals.tf  main.tf  variables.tf
ingest/: Makefile  app.py  bq_load.py  bq_ops.py  csv_download.py  gs_upload.py  pyproject.toml  settings.py  zip_extract.py
ingest/ingest/: download.py
scripts/: download-bts-ontime-perf.sh  ingest.sh
terraform/: README.md  main.tf
tests/ingest/: test_download.py
